--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -162,6 +162,7 @@ h1, h2, h3, .h1, .h2, .h3 {
   margin-bottom: 0.7142857143rem; }
 
 img {
+  object-fit: cover;
   max-width: 100%; }
 
 .img-fluid {
@@ -13480,7 +13481,7 @@ Height property
     transition: margin-left 0.3s ease-in-out;
     margin-left: 280px;
     background: #272e48;
-    min-height: 70px;
+    min-height: 100px;
     padding: 0;
     -webkit-box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1);
     box-shadow: 0 0 21px 0 rgba(89, 102, 122, 0.1); }
@@ -13640,8 +13641,8 @@ Height property
   font-size: 1rem !important;
   line-height: normal !important; }
   .navbar-custom-menu .user-menu a img {
-    width: 40px;
-    height: 40px;
+    width: 69px;
+    height: 66px;
     border-radius: 100px; }
   .navbar-custom-menu .user-menu a:hover, .navbar-custom-menu .user-menu a:focus {
     background-color: transparent !important; }
@@ -13649,13 +13650,13 @@ Height property
   -ms-flex-direction: row;
   flex-direction: row; }
   .navbar-custom-menu .navbar-nav > li {
-    height: 60px; }
+    height: 90px; }
     .navbar-custom-menu .navbar-nav > li > a.dropdown-toggle {
       padding: 10px;
       vertical-align: middle;
       display: block;
       font-size: 1.5rem;
-      height: 45px;
+      height: 67px;
       text-align: center;
       width: 45px;
       line-height: 25px;
@@ -17047,7 +17048,8 @@ time {
   margin-left: -45px; }
   .widget-user .widget-user-image > img {
     width: 90px;
-    height: auto;
+    /* height: auto; */
+    height: 96px;
     border: 3px solid #ffffff; }
 .widget-user .box-footer {
   padding-top: 30px; }
