--- a/public/backend/css/skin_color.css
+++ b/public/backend/css/skin_color.css
@@ -9,6 +9,7 @@ File: scss
 /*Lite color*/
 /*Theme Colors For Dark*/
 /*---light skin---*/
+
 .light-skin .main-header li.user-header {
   background-color: #ffffff; }
 .light-skin .main-header .navbar .sidebar-toggle {
@@ -16,7 +17,7 @@ File: scss
 .light-skin .main-header .navbar .res-only-view {
   color: #475f7b; }
 .light-skin .main-header .navbar .nav > li > a {
-  color: #d5dfea; }
+  color: #3b82cf; }
   .light-skin .main-header .navbar .nav > li > a:hover, .light-skin .main-header .navbar .nav > li > a:active, .light-skin .main-header .navbar .nav > li > a:focus {
     background-color: rgba(0, 0, 0, 0.05); }
 .light-skin .main-header .navbar .nav .open > a {
@@ -861,6 +862,3 @@ body.dark-skin {
   /* filter: contrast(175%) blur(5px) */
 }
 
-.brightest-green {
-  background: color-mix(in lab, #cb2d2d 20%, #3b1c5a);
-}
